src/DHSemanticGrammarParser.py
# Generated from DHSemanticGrammar.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from sensors import SensorPresence, SensorRain, SensorLight, SensorTemperature, SensorTime, SensorSmoke, SensorWind, SensorIntruders, SensorFlood, SensorGas
from Action import Action
from Transition import Transition
from behaviour import Behaviour
from State import State
from House import House
from Room import Room


class DHSemanticGrammarParser ( Parser ):

    grammarFileName = "DHSemanticGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'sensor_presence'", "'sensor_rain'", 
                     "'sensor_light'", "'sensor_temperature'", "'sensor_time'", 
                     "'sensor_smoke'", "'sensor_gas'", "'sensor_wind'", 
                     "'sensor_intruder'", "'sensor_flood'", "'actuator_door'", 
                     "'actuator_heat'", "'actuator_wblind'", "'actuator_light'", 
                     "'actuator_window'", "'actuator_cold'", "'actuator_gas'", 
                     "'actuator_wind'", "'actuator_alarm'", "'actuator_emergency'", 
                     "'room'", "'house'", "'corridor'", "'global'", "'state'", 
                     "'init'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "':='", "';'", "'{'", "'}'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "SPRESENCIA", "SLLUVIA", "SILUMINACION", 
                      "STEMPERATURA", "SRELOJ", "SHUMO", "SGAS", "SVIENTO", 
                      "SINTRUSOS", "SINUNDACION", "APUERTA", "ACALEFACCION", 
                      "APERSIANA", "ALUZ", "AVENTANA", "AFRIO", "AGAS", 
                      "ATOLDO", "AALARMA", "AEMERGENCIA", "ROOM", "HOUSE", 
                      "CORRIDOR", "GLOBAL", "STATE", "INIT", "OPL", "BOOL", 
                      "ID", "DOUBLE", "TIME", "COMBINATION", "SEQ", "SEMICOLON", 
                      "LBRACKET", "RBRACKET", "COMMA", "SPACE", "COMMENT" ]

    RULE_casa = 0
    RULE_lh = 1
    RULE_h = 2
    RULE_lp = 3
    RULE_p = 4
    RULE_l2id = 5
    RULE_c = 6
    RULE_lest = 7
    RULE_lactions = 8
    RULE_action = 9
    RULE_init = 10
    RULE_trans = 11
    RULE_t = 12
    RULE_lsl = 13
    RULE_lal = 14
    RULE_lsg = 15
    RULE_lag = 16
    RULE_s = 17
    RULE_a = 18
    RULE_spresencia = 19
    RULE_slluvia = 20
    RULE_shumo = 21
    RULE_sintrusos = 22
    RULE_sinundacion = 23
    RULE_sgas = 24
    RULE_siluminacion = 25
    RULE_stemperatura = 26
    RULE_sviento = 27
    RULE_sreloj = 28
    RULE_apuerta = 29
    RULE_acalefaccion = 30
    RULE_apersiana = 31
    RULE_aluz = 32
    RULE_aventana = 33
    RULE_afrio = 34
    RULE_agas = 35
    RULE_atoldo = 36
    RULE_aalarma = 37
    RULE_aemergencia = 38

    ruleNames =  [ "casa", "lh", "h", "lp", "p", "l2id", "c", "lest", "lactions", 
                   "action", "init", "trans", "t", "lsl", "lal", "lsg", 
                   "lag", "s", "a", "spresencia", "slluvia", "shumo", "sintrusos", 
                   "sinundacion", "sgas", "siluminacion", "stemperatura", 
                   "sviento", "sreloj", "apuerta", "acalefaccion", "apersiana", 
                   "aluz", "aventana", "afrio", "agas", "atoldo", "aalarma", 
                   "aemergencia" ]

    EOF = Token.EOF
    SPRESENCIA=1
    SLLUVIA=2
    SILUMINACION=3
    STEMPERATURA=4
    SRELOJ=5
    SHUMO=6
    SGAS=7
    SVIENTO=8
    SINTRUSOS=9
    SINUNDACION=10
    APUERTA=11
    ACALEFACCION=12
    APERSIANA=13
    ALUZ=14
    AVENTANA=15
    AFRIO=16
    AGAS=17
    ATOLDO=18
    AALARMA=19
    AEMERGENCIA=20
    ROOM=21
    HOUSE=22
    CORRIDOR=23
    GLOBAL=24
    STATE=25
    INIT=26
    OPL=27
    BOOL=28
    ID=29
    DOUBLE=30
    TIME=31
    COMBINATION=32
    SEQ=33
    SEMICOLON=34
    LBRACKET=35
    RBRACKET=36
    COMMA=37
    SPACE=38
    COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CasaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.data = None
            self._ID = None # Token
            self.lh1 = None # LhContext
            self.lp1 = None # LpContext
            self.lsg1 = None # LsgContext
            self.lag1 = None # LagContext

        def HOUSE(self):
            return self.getToken(DHSemanticGrammarParser.HOUSE, 0)

        def ID(self):
            return self.getToken(DHSemanticGrammarParser.ID, 0)

        def LBRACKET(self):
            return self.getToken(DHSemanticGrammarParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(DHSemanticGrammarParser.RBRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(DHSemanticGrammarParser.SEMICOLON, 0)

        def EOF(self):
            return self.getToken(DHSemanticGrammarParser.EOF, 0)

        def lh(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.LhContext,0)


        def lp(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.LpContext,0)


        def lsg(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.LsgContext,0)


        def lag(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.LagContext,0)


        def getRuleIndex(self):
            return DHSemanticGrammarParser.RULE_casa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCasa" ):
                listener.enterCasa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCasa" ):
                listener.exitCasa(self)




    def casa(self):

        localctx = DHSemanticGrammarParser.CasaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_casa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(DHSemanticGrammarParser.HOUSE)
            self.state = 79
            localctx._ID = self.match(DHSemanticGrammarParser.ID)
            self.state = 80
            self.match(DHSemanticGrammarParser.LBRACKET)
            self.state = 81
            localctx.lh1 = self.lh()
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 82
                localctx.lp1 = self.lp()


            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 85
                localctx.lsg1 = self.lsg()


            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 18872320) != 0:
                self.state = 88
                localctx.lag1 = self.lag()


            self.state = 91
            self.match(DHSemanticGrammarParser.RBRACKET)
            self.state = 92
            self.match(DHSemanticGrammarParser.SEMICOLON)
            self.state = 93
            self.match(DHSemanticGrammarParser.EOF)
            localctx.data = House((None if localctx._ID is None else localctx._ID.text), localctx.lh1.list_rooms, localctx.lsg1.list_sensors, localctx.lag1.list_actuators)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LhContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.list_rooms = None
            self.h1 = None # HContext
            self.lh1 = None # LhContext

        def COMMA(self):
            return self.getToken(DHSemanticGrammarParser.COMMA, 0)

        def h(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.HContext,0)


        def lh(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.LhContext,0)


        def SEMICOLON(self):
            return self.getToken(DHSemanticGrammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return DHSemanticGrammarParser.RULE_lh

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLh" ):
                listener.enterLh(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLh" ):
                listener.exitLh(self)




    def lh(self):

        localctx = DHSemanticGrammarParser.LhContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_lh)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                localctx.h1 = self.h()
                self.state = 97
                self.match(DHSemanticGrammarParser.COMMA)
                self.state = 98
                localctx.lh1 = self.lh()
                localctx.list_rooms = localctx.lh1.list_rooms + [localctx.h1.data]
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                localctx.h1 = self.h()
                self.state = 102
                self.match(DHSemanticGrammarParser.SEMICOLON)
                localctx.list_rooms = [localctx.h1.data]
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.data = None
            self._ROOM = None # Token
            self._ID = None # Token
            self.lsl1 = None # LslContext
            self.lal1 = None # LalContext
            self.c1 = None # CContext

        def ROOM(self):
            return self.getToken(DHSemanticGrammarParser.ROOM, 0)

        def ID(self):
            return self.getToken(DHSemanticGrammarParser.ID, 0)

        def LBRACKET(self):
            return self.getToken(DHSemanticGrammarParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(DHSemanticGrammarParser.RBRACKET, 0)

        def lsl(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.LslContext,0)


        def lal(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.LalContext,0)


        def c(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.CContext,0)


        def getRuleIndex(self):
            return DHSemanticGrammarParser.RULE_h

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterH" ):
                listener.enterH(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitH" ):
                listener.exitH(self)




    def h(self):

        localctx = DHSemanticGrammarParser.HContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_h)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            localctx._ROOM = self.match(DHSemanticGrammarParser.ROOM)
            self.state = 108
            localctx._ID = self.match(DHSemanticGrammarParser.ID)
            self.state = 109
            self.match(DHSemanticGrammarParser.LBRACKET)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 2046) != 0:
                self.state = 110
                localctx.lsl1 = self.lsl()


            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 2095104) != 0:
                self.state = 113
                localctx.lal1 = self.lal()


            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 116
                localctx.c1 = self.c()


            self.state = 119
            self.match(DHSemanticGrammarParser.RBRACKET)
            localctx.data = Room((None if localctx._ID is None else localctx._ID.text), (None if localctx._ROOM is None else localctx._ROOM.text), (None if (None if localctx.c1 is None else self._input.getText(localctx.c1.start,localctx.c1.stop)) is None else localctx.c1.comp.states_list), '', False, False, 0.0, 
              '00:00', 0.0, False, False, False, False, False, 
              (None if (None if localctx.lsl1 is None else self._input.getText(localctx.lsl1.start,localctx.lsl1.stop)) is None else localctx.lsl1.list_sensors), (None if (None if localctx.lal1 is None else self._input.getText(localctx.lal1.start,localctx.lal1.stop)) is None else localctx.lal1.list_actuators), []) 
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.list_corridors = None
            self.pas = None # PContext
            self.corLs = None # LpContext

        def COMMA(self):
            return self.getToken(DHSemanticGrammarParser.COMMA, 0)

        def p(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.PContext,0)


        def lp(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.LpContext,0)


        def SEMICOLON(self):
            return self.getToken(DHSemanticGrammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return DHSemanticGrammarParser.RULE_lp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLp" ):
                listener.enterLp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLp" ):
                listener.exitLp(self)




    def lp(self):

        localctx = DHSemanticGrammarParser.LpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_lp)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                localctx.pas = self.p()
                self.state = 123
                self.match(DHSemanticGrammarParser.COMMA)
                self.state = 124
                localctx.corLs = self.lp()
                localctx.list_corridors = localctx.corLs.list_corridors + [localctx.pas.data]
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                localctx.pas = self.p()
                self.state = 128
                self.match(DHSemanticGrammarParser.SEMICOLON)
                localctx.list_corridors = [localctx.pas.data]
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.data = None
            self._CORRIDOR = None # Token
            self._ID = None # Token
            self._l2id = None # L2idContext
            self.lsl1 = None # LslContext
            self.lal1 = None # LalContext
            self.c1 = None # CContext

        def CORRIDOR(self):
            return self.getToken(DHSemanticGrammarParser.CORRIDOR, 0)

        def ID(self):
            return self.getToken(DHSemanticGrammarParser.ID, 0)

        def LBRACKET(self):
            return self.getToken(DHSemanticGrammarParser.LBRACKET, 0)

        def l2id(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.L2idContext,0)


        def RBRACKET(self):
            return self.getToken(DHSemanticGrammarParser.RBRACKET, 0)

        def lsl(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.LslContext,0)


        def lal(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.LalContext,0)


        def c(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.CContext,0)


        def getRuleIndex(self):
            return DHSemanticGrammarParser.RULE_p

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP" ):
                listener.enterP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP" ):
                listener.exitP(self)




    def p(self):

        localctx = DHSemanticGrammarParser.PContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            localctx._CORRIDOR = self.match(DHSemanticGrammarParser.CORRIDOR)
            self.state = 134
            localctx._ID = self.match(DHSemanticGrammarParser.ID)
            self.state = 135
            self.match(DHSemanticGrammarParser.LBRACKET)
            self.state = 136
            localctx._l2id = self.l2id()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 2046) != 0:
                self.state = 137
                localctx.lsl1 = self.lsl()


            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 2095104) != 0:
                self.state = 140
                localctx.lal1 = self.lal()


            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 143
                localctx.c1 = self.c()


            self.state = 146
            self.match(DHSemanticGrammarParser.RBRACKET)
            localctx.data = Room((None if localctx._ID is None else localctx._ID.text), (None if localctx._CORRIDOR is None else localctx._CORRIDOR.text), (None if (None if localctx.c1 is None else self._input.getText(localctx.c1.start,localctx.c1.stop)) is None else localctx.c1.comp.states_list), '', False, False, 0.0, 
              '00:00', 0.0, False, False, False, False, False, 
              (None if (None if localctx.lsl1 is None else self._input.getText(localctx.lsl1.start,localctx.lsl1.stop)) is None else localctx.lsl1.list_sensors), (None if (None if localctx.lal1 is None else self._input.getText(localctx.lal1.start,localctx.lal1.stop)) is None else localctx.lal1.list_actuators), localctx._l2id.list_l2id) 
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class L2idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.list_l2id = None
            self._ID = None # Token
            self.l2id1 = None # L2idContext
            self.id1 = None # Token
            self.id2 = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DHSemanticGrammarParser.ID)
            else:
                return self.getToken(DHSemanticGrammarParser.ID, i)

        def COMMA(self):
            return self.getToken(DHSemanticGrammarParser.COMMA, 0)

        def l2id(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.L2idContext,0)


        def SEMICOLON(self):
            return self.getToken(DHSemanticGrammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return DHSemanticGrammarParser.RULE_l2id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL2id" ):
                listener.enterL2id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL2id" ):
                listener.exitL2id(self)




    def l2id(self):

        localctx = DHSemanticGrammarParser.L2idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_l2id)
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                localctx._ID = self.match(DHSemanticGrammarParser.ID)
                self.state = 150
                self.match(DHSemanticGrammarParser.COMMA)
                self.state = 151
                localctx.l2id1 = self.l2id()
                localctx.list_l2id = localctx.l2id1.list_l2id + [(None if localctx._ID is None else localctx._ID.text)]
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                localctx.id1 = self.match(DHSemanticGrammarParser.ID)
                self.state = 155
                self.match(DHSemanticGrammarParser.COMMA)
                self.state = 156
                localctx.id2 = self.match(DHSemanticGrammarParser.ID)
                self.state = 157
                self.match(DHSemanticGrammarParser.SEMICOLON)
                localctx.list_l2id = [(None if localctx.id2 is None else localctx.id2.text), (None if localctx.id1 is None else localctx.id1.text)]
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.comp = None
            self._lest = None # LestContext
            self._init = None # InitContext
            self._trans = None # TransContext

        def LBRACKET(self):
            return self.getToken(DHSemanticGrammarParser.LBRACKET, 0)

        def lest(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.LestContext,0)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(DHSemanticGrammarParser.SEMICOLON)
            else:
                return self.getToken(DHSemanticGrammarParser.SEMICOLON, i)

        def init(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.InitContext,0)


        def trans(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.TransContext,0)


        def RBRACKET(self):
            return self.getToken(DHSemanticGrammarParser.RBRACKET, 0)

        def getRuleIndex(self):
            return DHSemanticGrammarParser.RULE_c

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterC" ):
                listener.enterC(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitC" ):
                listener.exitC(self)




    def c(self):

        localctx = DHSemanticGrammarParser.CContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_c)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(DHSemanticGrammarParser.LBRACKET)
            self.state = 162
            localctx._lest = self.lest()
            self.state = 163
            self.match(DHSemanticGrammarParser.SEMICOLON)
            self.state = 164
            localctx._init = self.init()
            self.state = 165
            self.match(DHSemanticGrammarParser.SEMICOLON)
            self.state = 166
            localctx._trans = self.trans()
            self.state = 167
            self.match(DHSemanticGrammarParser.RBRACKET)
            self.state = 168
            self.match(DHSemanticGrammarParser.SEMICOLON)
            localctx.comp = Behaviour(localctx._lest.list_states, localctx._init.state, localctx._trans.list_trans)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LestContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.list_states = None
            self._ID = None # Token
            self.lac1 = None # LactionsContext
            self.lest1 = None # LestContext
            self.id_ = None # Token

        def STATE(self):
            return self.getToken(DHSemanticGrammarParser.STATE, 0)

        def ID(self):
            return self.getToken(DHSemanticGrammarParser.ID, 0)

        def LBRACKET(self):
            return self.getToken(DHSemanticGrammarParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(DHSemanticGrammarParser.RBRACKET, 0)

        def COMMA(self):
            return self.getToken(DHSemanticGrammarParser.COMMA, 0)

        def lactions(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.LactionsContext,0)


        def lest(self):
            return self.getTypedRuleContext(DHSemanticGrammarParser.LestContext,0)


        def getRuleIndex(self):
            return DHSemanticGrammarParser.RULE_lest

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLest" ):
                listener.enterLest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLest" ):
                listener.exitLest(self)




    def lest(self):
